# mquantum

./: .ci-explore-current-run  .ci_explore_agent_id  .ci_explore_log_file  .editorconfig  .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ci-explore-log.20260220-235644-26884-20130.md  ci-explore-log.20260220-235733-30722-4229.md  ci-explore-log.20260220-235823-35110-26523.md  ci-explore-log.20260220-235843-42257-26313.md  ci-explore-log.20260220-235917-44700-714.md  ci-explore-log.20260220-235933-44833-17769.md  ci-explore-log.20260221-001342-68836-7153.md  ci-explore-log.20260221-003021-87781-28507.md  ci-explore-log.20260221-004405-23143-29535.md  ci-explore-log.20260221-005052-30215-7398.md  ci-explore-log.20260221-214113-48672-7993.md  ci-explore-log.20260221-214741-77529-5526.md  ci-explore-log.md  ci-godmode_20260321_075747.md  claude-mcp.sh  dd.md  eslint.config.js  index.html  package-lock.json  package.json  playwright-temp.config.ts  playwright.benchmark.config.ts  playwright.config.ts  pnpm-lock.yaml  stryker.config.mjs  stylelint.config.mjs  tsconfig.json  tsconfig.node.json  (+5 more)
.chatmodes/: beast-knowledge.md  beast-prd.md  beast-tasks.md
.claude/: .last_compact.json  .mcp.json
.claude/commands/: ci-webgpu-performance.md  ci-webgpu.md  optimize-shaders.md  react-security-audit.md
.claude/rules/: quantum-physics.md  rendering.md  shaders.md  stores.md  testing.md  url-serializer.md
.github/workflows/: ci.yml  mutation-testing.yml  security-audit.yml
.husky/: pre-commit
.serena/: project.yml
.serena/memories/: 2d_rendering_mode_2026_02_11.md  animation_bias_scene_load_clamp_fix_2026_02_21.md  background_color_no_skybox_fix_2026_02_07.md  bloom_gaussian_mip_sampling_fix_2026_02_20.md  chromatic_dispersion_optimization_analysis_2026_02_08.md  code_style_conventions.md  (+111 more)
artifacts/: srmt-publication-grid-192x48.csv  srmt-publication-sweep.csv
codereview-20260124-123148/: final_report.md  import_verification.json  inline_findings.json  integration_verification.json  logic_verification.json  review_scope.json
codereview-20260204-123232/: FINAL_REPORT.md  async_race_findings.json  import_verification.json  inline_findings.json  integration_verification.json  logic_verification.json  performance_findings.json  review_scope.json
codereview-20260204-174238/: FINAL_REPORT.md  review_scope.json
codereview-20260204-182401/: final_report.md  review_scope.json
docs/: api.md  architecture.md  decisions.md  development.md  frontend.md  getting-started.md  market-readiness-competitors.md  market-readiness-discovery.md  refactoring-backlog.md  related-work.md  shader-optimization-plan.md  shader-review.md  shader-review2.md  styleguide-review.md  testing.md  tsl.md  tsl2.md  video-sizes.md
logs/: quantum_discovery_20260428_223950.md
scripts/: bench-summary.js  benchmark-peschel.ts  bundle-size-budgets.json  check-bundle-size.js  check-chunk-cycles.js  check-circular-deps.js  check-coverage-ratchet.js  check-detect-gpu-benchmarks.js  check-no-new-barrels.js  check-no-prettier-check.js  check-untracked-imports.js  check-unused-exports.js  check-wgsl-backticks.js  no-new-barrels-baseline.json  sync-detect-gpu-benchmarks.js  ui-overhaul-baseline.mjs  unused-exports-baseline.json
src/: App.tsx  index.css  main.tsx
src/wasm/mdimension_core/: Cargo.toml
src/wasm/mdimension_core/pkg/: mdimension_core.d.ts  mdimension_core.js  mdimension_core_bg.wasm  mdimension_core_bg.wasm.d.ts  package.json
src/wasm/mdimension_core/src/: animation.rs  animation_matrix_unrolled.rs  animation_projection.rs  animation_vector_ops.rs  bec_spectrum.rs  clifford.rs  collapse.rs  complex_matrix.rs  disorder.rs  entanglement.rs  fft.rs  lib.rs  tdse_diagnostics.rs  wdw_airy.rs  wdw_bessel.rs  wdw_implicit_bulk.rs  wheeler_dewitt.rs
test-results/: .last-run.json  test-results.json
(+2836 files in other folders)
