[package]
name = "mdimension-core"
version = "0.1.0"
edition = "2021"
description = "Core geometric algorithms for mdimension (WASM)"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3', '--enable-simd']  # Maximum runtime speed + SIMD optimizations

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
itertools = "0.12"
console_error_panic_hook = "0.1.7"

# Optimization profile for Release builds (MAXIMUM SPEED)
[profile.release]
opt-level = 3           # Maximum optimization for speed
lto = "fat"             # Full LTO for cross-crate optimization  
strip = true            # Strip debug symbols
codegen-units = 1       # Single codegen unit for better optimization
panic = "abort"         # Faster panic handling
overflow-checks = false # Skip overflow checks (we validate inputs)
